--- a/game.css
+++ b/game.css
@@ -1,39 +1,39 @@
-  body {
-      font-family: "Quicksand", sans-serif;
-      background-color: #1e1e1e;
-      color: #acd2e4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
+body {
+    font-family: "Quicksand", sans-serif;
+    background-color: #1e1e1e;
+    color: #acd2e4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
 
-    h1 {
-      margin-bottom: 20px;
-      text-shadow: 0 0 8px #acd2e4;
-    }
+  h1 {
+    margin-bottom: 20px;
+    text-shadow: 0 0 8px #acd2e4;
+  }
 
 
 
-  #rules {
-    position: fixed;
-    top: 20%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 400px;
-    height: 250px;
-    background-color: rgb(205, 201, 201);
-    /* background-color: #222; */
-    color: black;
-    font-weight: 500;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 20px rgba(213, 213, 204, 0.806);
-    text-align: center;
-    z-index: 999;
-    display: none;
+#rules {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+  height: 250px;
+  background-color: rgb(205, 201, 201);
+  /* background-color: #222; */
+  color: black;
+  font-weight: 500;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(213, 213, 204, 0.806);
+  text-align: center;
+  z-index: 999;
+  display: none;
 }
 
 #rules button {
@@ -106,6 +106,10 @@
   box-shadow: 0 0 5px #009fff;
   border-radius: 8px;
   transition: 0.3s ease;
+}
+#startBtn:disabled{
+  opacity: 0.2;
+  cursor: not-allowed;
 }
 #startBtn:hover{
   box-shadow: 0 0 10px #ec2f4b;
